Fixed minor style not visible in Chrome #544

--- a/web/Styles/app/dashboard/SelectAttributes.styl
+++ b/web/Styles/app/dashboard/SelectAttributes.styl
@@ -24,7 +24,7 @@
             box-sizing border-box
             width auto !important
             float left
-            box-shadow: 0px 0px 4px -2px;
+            box-shadow: 0px 0px 6px -2px black;
         
             .SelectAttributes-item-remove {
                 text-decoration none
