--- a/web/Styles/dashboard.css
+++ b/web/Styles/dashboard.css
@@ -4059,8 +4059,8 @@ form ul li {
   box-sizing: border-box;
   width: auto !important;
   float: left;
-  -webkit-box-shadow: 0px 0px 4px -2px;
-  box-shadow: 0px 0px 4px -2px;
+  -webkit-box-shadow: 0px 0px 6px -2px #000;
+  box-shadow: 0px 0px 6px -2px #000;
 }
 
 /* line 29 : C:\Users\Iago\Proxectos\Loconomics.com\source\web\Styles\app\dashboard\SelectAttributes.styl */
